--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go.arch</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <div id="app"></div>
-    <script src='js/react-min.js'></script>
-    <script src='js/feact-dom.js'></script>
-    <script src='js/classnames-min.js'></script>
-    
-    <script src="js/index.js"></script>
-</body>
-</html>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Go.arch</title>
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="slick/slick.css">
+		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
+	</head>
+	<body>
+		<div class="slider">
+			<div class="slider__wrapper">
+				<div class="slider__items">
+					<div class="slider__item">
+						<img class="img-fluid" src="img/hero/hero.jpg" alt="c1">
+					</div>
+					<div class="slider__item">
+						<img class="img-fluid" src="img/hero/hero.jpg" alt="c2">
+					</div>
+					<div class="slider__item">
+						<img class="img-fluid" src="img/hero/hero.jpg" alt="c3">
+					</div>
+					<div class="slider__item">
+						<img class="img-fluid" src="img/hero/hero.jpg" alt="c4">
+					</div>
+				</div>
+			</div>
+			<a class="slider__control slider__control_prev" href="#" role="button"></a>
+			<a class="slider__control slider__control_next" href="#" role="button"></a>
+		</div>
+
+		<script src="js/slide.js"></script>
+	</body>
+	</html>
